Documented user api
